--- a/server/package.json
+++ b/server/package.json
@@ -12,17 +12,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.12.2",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.0",
-    "nodemon": "^3.1.10",
-    "openai": "^6.1.0",
-    "stripe": "^19.1.0",
-    "svix": "^1.76.1"
+    "mongoose": "^8.17.1",
+    "openai": "^5.12.2",
+    "stripe": "^18.4.0",
+    "svix": "^1.73.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
